@@ -49,9 +49,6 @@ skip = Stancer::Core::Types
 [Test::Kwalitee]
 [Test::MinimumVersion]
 
-[Test::Perl::Critic]
-critic_config = .perlcriticrc
-
 [Test::Pod::Coverage::Configurable]
 also_private = BUILDARGS
 also_private = qr/^has_/
